--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -86,10 +86,12 @@
         </div>
 
         <!--просмотр-->
-        <!--<div id="file_activity_view_button" class="file_activity_button block_select button_margin" style="width: 80px; display: none" onclick="()">
-          <img class="icon" width="20" height="20" src="static/img/activity/see.svg">
-          <p>view</p>
-        </div>-->
+        <a id="file_activity_view_button_href">
+          <div id="file_activity_view_button" class="file_activity_button block_select button_margin" style="width: 80px; display: none" onclick="()">
+            <img class="icon" width="20" height="20" src="static/img/activity/see.svg">
+            <p>view</p>
+          </div>
+        </a>
 
         <!--иконка и имя файла-->
         <div class="file_ico_name_div">
