--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -86,7 +86,7 @@
         </div>
 
         <!--просмотр-->
-        <a id="file_activity_view_button_href">
+        <a id="file_activity_view_button_href" target="_blank">
           <div id="file_activity_view_button" class="file_activity_button block_select button_margin" style="width: 80px; display: none" onclick="()">
             <img class="icon" width="20" height="20" src="static/img/activity/see.svg">
             <p>view</p>
@@ -123,7 +123,7 @@
         </div>
 
         <!--продпросмотр фотографии-->
-        <div id="file_activity_view_button">
+        <div id="file_activity_view">
           <div class="preview_info">
             <div style="position: absolute; margin: -7px 12px">
               <input type="checkbox" class="custom-checkbox" id="checkbox_preview_image" name="checkbox_preview_image" value="yes" onchange="load_preview_image()">
