--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -51,6 +51,13 @@
         <p>create file</p>
       </div>
 
+      <label for="fileElem">
+        <div class="small_button_style block_select button_margin" style="top: 181px; width: 200px;">
+          <img class="icon" width="20" height="20" src="static/img/upload.svg">
+          <p>upload file</p>
+        </div>
+      </label>
+
       <!--информация о диске-->
       <div class="disk_info">
         <img class="icon" style="margin: 5px 5px" width="18" height="18" src="static/img/dvd-disk.svg">
@@ -321,6 +328,8 @@
         <p style="margin: 5px 28px">create</p>
       </div>
     </div>
+
+    <input name="fileElem" type="file" id="fileElem" style="display: none;" multiple onchange="uploadFile(this.files)">
 
   </body>
 
