--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -302,7 +302,7 @@
       </div>
 
       <img class="icon" width="60" height="60" style="position: absolute; right: 30px; top: 45px;" src="static/img/warning.svg">
-      <h3 style="position: absolute; top: 40px; left: 140px;" align="right">There is no space to write the file.</h3>
+      <h3 style="position: absolute; top: 40px; left: 110px;" align="right">There is no disk space to modify the file.</h3>
       <p style="position: absolute; top: 70px; left: 50px;" align="right">Delete unnecessary files or ask the administrator to increase the limit.</p>
 
       <div class="dialog_button block_select" style="left: 10px; bottom: 10px; width: 100px;" onclick="close_no_place_dialog()">
