--- a/app/templates/m-main.html
+++ b/app/templates/m-main.html
@@ -5,12 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href = "static/css/main.1.css"/>
 
+    <link rel="stylesheet" href = "static/css/mobile/file.1.css"/>
+
   </head>
   <body class="scroll_style">
     <div id="file_list_div" class="file_list">
-      <ul id="file_list" style="overflow-x:hidden;"></ul>
+      <ul id="file_list" style="overflow-x:hidden;">
+        <div class="file">
+          <p>test</p>
+        </div>
+      </ul>
     </div>
     
   </body>
+
+  <!-- <script type="text/javascript" src="static/js/main.1.js"></script>
+
+  <script type="text/javascript" src="static/js/theme.1.js"></script>
+
+  <script type="text/javascript" src="static/js/info.1.js"></script>
+  <script type="text/javascript" src="static/js/user.1.js"></script>
+  <script type="text/javascript" src="static/js/upload_file.1.js"></script>
+  <script type="text/javascript" src="static/js/file.1.js"></script> -->
 
 </html>
