--- a/app/templates/m-main.html
+++ b/app/templates/m-main.html
@@ -4,28 +4,252 @@
     <title>[ DISK ]</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href = "static/css/main.1.css"/>
+    <link rel="stylesheet" href = "static/css/checkBox.1.css"/>
 
     <link rel="stylesheet" href = "static/css/mobile/file.1.css"/>
 
+    <link rel="stylesheet" href = "static/css/mobile/topBar.1.css"/>
+    <link rel="stylesheet" href = "static/css/mobile/bottomBar.1.css"/>
+    <link rel="stylesheet" href = "static/css/mobile/fileinfoBar.1.css"/>
+
   </head>
   <body class="scroll_style">
+    <input id="path" class="" style="display: none" type=text placeholder="Path" onkeypress="">
+    <input type="checkbox" class="custom-checkbox" style="display: none;" id="checkbox_preview_image" name="checkbox_preview_image" value="yes" onchange="load_preview_image()">
+
     <div id="file_list_div" class="file_list">
-      <ul id="file_list" style="overflow-x:hidden;">
-        <div class="file">
-          <p>test</p>
-        </div>
-      </ul>
+      <ul id="file_list" style="overflow-x:hidden;"></ul>
     </div>
-    
+
+    <div class="bottomBar">
+
+      <!--информация о диске-->
+      <div class="disk_info">
+        <img class="icon_topBar" style="margin: 3px 5px" width="16" height="16" src="static/img/dvd-disk.svg">
+        <p id="disk_converted" class="top_bar_font_color" style="margin: -21px 30px">25.2GB / 100GB</p>
+      </div>
+
+      <!--информация о диске в виде прогресс бара-->
+      <div class="disk_space" id="disk_space_div">
+        <div id="disk_space_progress" class="disk_space_progress"></div>
+      </div>
+
+      <div class="move_buttons">
+        <img id="go_back" class="icon_topBar path_buttons block_select button_margin" style="position: absolute; right: 135px; top: 3px; transform: rotate(-90deg)" width="35" height="35" src="static/img/arrow up.svg" onclick="go_back_dir_history()">
+        <img id="go_forward" class="icon_topBar path_buttons block_select button_margin" style="position: absolute; right: 95px; top: 3px; transform: rotate(90deg)" width="35" height="35" src="static/img/arrow up.svg" onclick="go_forward_dir_history()">
+        <img id="refresh" class="icon_topBar path_buttons block_select button_margin" style="position: absolute; right: 55px; top: 3px; " width="35" height="35" src="static/img/refresh.svg" onclick="update_dir()">
+        <img id="go_home" class="icon_topBar path_buttons block_select button_margin" style="position: absolute; right: 10px; top: 3px; " width="35" height="35" src="static/img/home.svg" onclick="go_home()">
+      </div>
+
+    </div>
+
+    <div id="file_info_bar_background_black" class="background_black" style="display: none" onclick="close_rightBar()"></div>
+    <div class="rightBar" id="rightBar" style="display: none">
+      <!--закрытие панели-->
+      <div class="file_close_button block_select button_margin" onclick="close_rightBar()">
+        <img class="icon" width="20" height="20" src="static/img/cross.svg">
+        <p>close</p>
+      </div>
+
+      <!--информация о выбранном файле-->
+      <div id="file_info_block" style="display: none">
+        <!--редактирование-->
+        <div id="file_activity_edit_button" class="file_activity_button block_select button_margin" style="width: 80px; display: none" onclick="()">
+          <img class="icon" width="20" height="20" src="static/img/activity/edit.svg">
+          <p>edit</p>
+        </div>
+
+        <!--распаковка-->
+        <div id="file_activity_unpack_button" class="file_activity_button block_select button_margin" style="width: 100px; display: none" onclick="activity_unpack_file()">
+          <img class="icon" width="20" height="20" src="static/img/activity/unzip.svg">
+          <p>unpack</p>
+        </div>
+
+        <!--просмотр-->
+        <a id="file_activity_view_button_href" target="_blank">
+          <div id="file_activity_view_button" class="file_activity_button block_select button_margin" style="width: 80px; display: none" onclick="()">
+            <img class="icon" width="20" height="20" src="static/img/activity/see.svg">
+            <p>view</p>
+          </div>
+        </a>
+
+        <!--иконка и имя файла-->
+        <div class="file_ico_name_div">
+          <img id="file_icon" class="icon" style="margin: 10px 10px" width="40" height="40" src="static/img/files/file.svg">
+          <input id="fileName_input" class="input_style fileName_input" style="" type=text placeholder="file name" onkeypress="return rename_file_enter(event)">
+        </div>
+
+        <!--информация о файле-->
+        <div class="file_info_div">
+          <p id="file_type" style="margin-top: 10px;">type: None</p>
+          <p id="file_size">size: None</p>
+          <p id="file_path">path: None</p>
+          <p id="file_date">date of change: None</p>
+          <textarea class="input_style fileDescription" style="display: none"></textarea>
+        </div>
+
+        <!--кнопка скачивания-->
+        <a id="file_download_button" href="" download="test">
+          <div class="file_download_button block_select button_margin">
+            <img class="icon" width="20" height="20" src="static/img/download.svg">
+            <p>download</p>
+          </div>
+        </a>
+
+        <!--кнопка удаления файла-->
+        <div id="file_delete_button" class="file_delete_button block_select button_margin">
+          <img class="icon" width="20" height="20" src="static/img/trash.svg">
+          <p>delete</p>
+        </div>
+
+        <!--продпросмотр фотографии-->
+        <div id="file_activity_view">
+          <div class="preview_info">
+            <div style="position: absolute; margin: -7px 12px">
+              <input type="checkbox" class="custom-checkbox" id="checkbox_preview_image" name="checkbox_preview_image" value="yes" onchange="load_preview_image()">
+              <label for="checkbox_preview_image"><p>show preview</p></label>
+            </div>
+          </div>
+
+          <div class="preview_image" id="preview_image_div">
+            <img id="preview_image" class="" width="300px" src="/download?path=0&dir=&file=3.png" />
+          </div>
+        </div>
+
+      </div>
+
+      <!--информация о выбранных файлах и каталогах-->
+      <div id="file_list_block" style="display: none">
+        <div id="file_select_all_button" class="file_activity_button block_select button_margin" onclick="all_files_checkBox()">
+          <img class="icon" width="20" height="20" src="static/img/select all.svg">
+          <p>select all</p>
+        </div>
+
+        <!--количество выбранных файлов-->
+        <div class="file_list_info_div">
+          <p style="margin: 0px 0px;" align="center">Selected elements</p>
+          <img class="icon" style="position: absolute; top: 10px; left: 10px;" width="25" height="25" src="static/img/files/file.svg">
+          <p id="file_list_files" style="position: absolute; left: 40px; top: 3px;">Files: None</p>
+          <img class="icon" style="position: absolute; top: 47px; left: 10px;" width="25" height="25" src="static/img/files/folder.svg">
+          <p id="file_list_folders" style="position: absolute; left: 40px; top: 37px;">Folders: None</p>
+        </div>
+
+        <!--кнопка для скачивания выбранных файлов-->
+        <a id="file_list_download_button" href="" download="test">
+          <div class="file_list_download_button block_select button_margin">
+            <img class="icon" width="20" height="20" src="static/img/download.svg">
+            <p>download</p>
+          </div>
+        </a>
+
+        <!--кнопка для удаления выбранных файлов-->
+        <div id="file_list_delete_button" class="file_list_delete_button block_select button_margin" onclick="delete_file_dialog()">
+          <img class="icon" width="20" height="20" src="static/img/trash.svg">
+          <p>delete</p>
+        </div>
+
+
+        <!--кнопка для копирования выбранных файлов-->
+        <div id="file_list_copy_button" class="file_list_copy_button block_select button_margin" onclick="copy_file_buf()">
+          <img class="icon" width="20" height="20" src="static/img/copy.svg">
+          <p>copy</p>
+        </div>
+
+        <!--кнопка для копирования выбранных файлов-->
+        <div id="file_list_cut_button" class="file_list_cut_button block_select button_margin" onclick="copy_file_buf(true)">
+          <img class="icon" width="20" height="20" src="static/img/cut.svg">
+          <p>move</p>
+        </div>
+
+      </div>
+
+      <!--панель с информацией и кнопками для вставки файлов-->
+      <div id="copy_or_paste_block" style="display: none">
+
+        <!--количество выбранных файлов-->
+        <div class="file_list_info_div" style="height: 78px">
+          <p id="cop_info" style="margin: 0px 0px;" align="center"></p>
+          <img class="icon" style="position: absolute; top: 10px; left: 10px;" width="25" height="25" src="static/img/files/file.svg">
+          <p id="cop_file_list_files" style="position: absolute; left: 40px; top: 3px;">Files: None</p>
+          <img class="icon" style="position: absolute; top: 47px; left: 10px;" width="25" height="25" src="static/img/files/folder.svg">
+          <p id="cop_file_list_folders" style="position: absolute; left: 40px; top: 37px;">Folders: None</p>
+        </div>
+
+        <!--кнопка для вставки выбранных файлов-->
+        <div id="file_list_paste_button" class="file_list_paste_button block_select button_margin" style="border-right: 1px solid var(--main-border-color);" onclick="paste_files()">
+          <img class="icon" width="20" height="20" src="static/img/copy.svg">
+          <p>paste</p>
+        </div>
+      </div>
+
+      <!--индикация состояния загрузки файла-->
+      <div id="file_upload_block" style="display: none">
+        <!---->
+        <div class="file_upload_info">
+          <img class="icon anim_rotate" style="position: absolute; right: 8px; top: 8px;" width="35" height="35" src="static/img/dvd-disk.svg">
+          <p id="upload_file_count" style="margin: 10px 10px;">Upload 0 files...</p>
+          <h3 id="upload_file_name" style="margin: 10px 10px;">test.txt</h3>
+        </div>
+
+        <!--информация о диске в виде прогресс бара-->
+        <div class="upload_bg">
+          <div id="upload_progress" class="upload_progress"></div>
+        </div>
+      </div>
+    </div>
+
+    <div id="background_black" class="background_black" style="display: none" onclick="close_user()"></div>
+
+    <div id="path_select_list_div" class="path_select_list_div" style="display: none">
+      <ul id="path_list" style="position: absolute; top: -14px; width: 100%"></ul>
+    </div>
+
+    <div id="leftBar_user" class="leftBar_user" style="display: none">
+
+      <p class="top_bar_font_color" style="position: absolute; left: 8px; top: 32px;">Theme</p>
+
+      <div style="position: absolute; top: 55px; left: 15px;">
+        <input type="checkbox" class="custom-checkbox top_checkBox" id="lightThame_chekcbox" name="lightThame_chekcbox" value="yes" onchange="checkBox_thame(this)">
+        <label for="lightThame_chekcbox"><p class="top_bar_font_color">Light theme</p></label>
+      </div>
+
+      <!--кнопка для выхода из аккаунта-->
+      <div class="button_exit_style block_select button_margin" onclick="logout()">
+        <img class="icon_topBar" width="20" height="20" src="static/img/logout.svg">
+        <p class="top_bar_font_color">logout</p>
+      </div>
+    </div>
+
+    <div class="topBar">
+      <div id="path_select_button" class="path_select_button block_select button_margin" onclick="open_close_path_button()">
+        <img class="icon_topBar" style="margin: 10px 15px" width="25" height="25" src="static/img/dvd-disk.svg">
+        <p class="top_bar_font_color" id="path_status_size" style="position: absolute; margin: -42px 45px; color: #959DA5">1Gb</p>
+        <p class="top_bar_font_color" id="path_name" style="position: absolute; margin: -28px 45px">home</p>
+        <img id="path_select_button_triangle" class="icon_topBar" style="position:absolute; right: 10px; top: 10px" width="10" height="10" src="static/img/triangle.svg">
+      </div>
+
+      <div id="user_button" class="user_button block_select button_margin" onclick="open_close_user_button()">
+        <img class="icon_topBar" style="margin: 0px 15px" width="25" height="25" src="static/img/user.svg">
+        <p class="top_bar_font_color" id="user_status" style="margin: -22px 45px; color: #959DA5">user</p>
+        <p class="top_bar_font_color" id="user_name" style="margin: 15px 45px">100LAR</p>
+        <img id="user_button_triangle" class="icon_topBar" style="position:absolute; right: 10px; top: 10px" width="10" height="10" src="static/img/triangle.svg">
+      </div>
+    </div>
+
   </body>
 
-  <!-- <script type="text/javascript" src="static/js/main.1.js"></script>
+  <script>
+    var mobile = true;
+
+  </script>
+
+  <script type="text/javascript" src="static/js/main.1.js"></script>
 
   <script type="text/javascript" src="static/js/theme.1.js"></script>
 
   <script type="text/javascript" src="static/js/info.1.js"></script>
   <script type="text/javascript" src="static/js/user.1.js"></script>
   <script type="text/javascript" src="static/js/upload_file.1.js"></script>
-  <script type="text/javascript" src="static/js/file.1.js"></script> -->
+  <script type="text/javascript" src="static/js/file.1.js"></script>
 
 </html>
