--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -61,11 +61,11 @@
       <!--информация о диске-->
       <div class="disk_info">
         <img class="icon" style="margin: 5px 5px" width="18" height="18" src="static/img/dvd-disk.svg">
-        <p id="disk_converted"style="margin: -23px 30px">25.2GB / 100GB</p>
+        <p id="disk_converted" style="margin: -23px 30px">25.2GB / 100GB</p>
       </div>
 
       <!--информация о диске в виде прогресс бара-->
-      <div class="disk_space">
+      <div class="disk_space" id="disk_space_div">
         <div id="disk_space_progress" class="disk_space_progress"></div>
       </div>
     </div>
@@ -349,6 +349,11 @@
     <input name="fileElem" type="file" id="fileElem" style="display: none;" multiple onchange="uploadFile(this.files)">
 
   </body>
+
+  <script>
+    var mobile = false;
+
+  </script>
 
   <script type="text/javascript" src="static/js/main.1.js"></script>
 
