Кнопка для перехода в админ панель

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -64,7 +64,7 @@
           <hr class="left_bar_hr">
         </th></tr>
         <tr><th>
-          <div class="left_bar_button" id="left_bar_data_base" onclick="()">
+          <div class="left_bar_button" id="left_bar_data_base" onclick="window.close()">
             <img class="icon" width="18" height="18" src="static/img/admin/logout.svg">
             <p align="left">exit</p>
           </div>
