--- a/app/static/css/leftBar.1.css
+++ b/app/static/css/leftBar.1.css
@@ -68,6 +68,24 @@
   background-color: var(--hover-color);
 }
 
+.small_button_left_style {
+  position: absolute;
+  height: 35px;
+
+  width: 200px;
+
+  border-top: 1px solid var(--top-border-color);
+  border-bottom: 1px solid var(--top-border-color);
+  border-right: 1px solid var(--top-border-color);
+  background-color: var(--top-color);
+
+  cursor: pointer;
+}
+
+.small_button_left_style:hover {
+  background-color: var(--top-hover-color);
+}
+
 .button_exit_style {
   position: absolute;
   width: 200px;
