--- a/app/static/css/mobile/topBar.1.css
+++ b/app/static/css/mobile/topBar.1.css
@@ -61,6 +61,26 @@
   width: 50%;
 }
 
+.small_button_left_style {
+  position: absolute;
+  height: 35px;
+
+  width: 100%;
+
+  left: 0px;
+
+  border-top: 1px solid var(--top-border-color);
+  border-bottom: 1px solid var(--top-border-color);
+  border-right: 1px solid var(--top-border-color);
+  background-color: var(--top-color);
+
+  cursor: pointer;
+}
+
+.small_button_left_style:hover {
+  background-color: var(--top-hover-color);
+}
+
 .button_exit_style {
   position: absolute;
   width: 100%;
