--- a/app/static/css/admin/main.1.css
+++ b/app/static/css/admin/main.1.css
@@ -22,7 +22,7 @@ ul {
 input {outline:none;}
 
 body {
-  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,Arial,sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
   font-size: 14px;
   line-height: 1.5;
 }
@@ -47,4 +47,41 @@ body {
   margin: 8px 0;
   border-radius: 5px;
   height: 30px;
+}
+
+.progress_bar {
+  width: 100%;
+
+  border-top: 1px solid #30363D;
+  border-bottom: 1px solid #30363D;
+
+  background-color: #010409;
+
+  height: 10px;
+
+  display: block;
+  border-collapse: collapse;
+
+}
+
+.progress_bar_state {
+  top: 0px;
+  height: 10px;
+
+  border-right: 1px solid #30363D;
+
+  background-color: #949494;
+  /* background-color: #707070; */
+
+  left: 0px;
+
+}
+
+.memory_usage_ul {
+  margin: 10px 30px;
+}
+
+.memory_usage_ul li {
+  list-style-type: disc;
+  white-space: nowrap;
 }
