--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -80,8 +80,46 @@
           <h2>Dashboard</h2>
         </div>
         <hr class="main_page_hr">
-        <p>hello</p>
+        <div class="main_page_button" style="width: 100px; margin: 10px" onclick="get_server_info()">
+          <img style="margin: 5px 5px" class="icon" width="20" height="20" src="static/img/admin/refresh.svg">
+          <p style="margin: -25px 35px">refresh</p>
+        </div>
       </div>
+      <br>
+      <table class="page_table">
+        <tr>
+          <th align="left">
+            <div class="border sub_border_size" style="height: 70px;" align="left">
+              <img class="icon" style="position: absolute; margin: 10px;" width="20" height="20" src="static/img/admin/clock.svg">
+              <p style="margin: 10px 50px; width: 100%; color: #8B949E; font-weight: normal;">time running</p>
+              <p id="server_time_running" style="margin: 10px 10px; width: 100%; font-weight: normal;"></p>
+            </div>
+          </th>
+          <th align="right">
+            <div class="border sub_border_size" style="height: 135px;" align="left">
+              <img class="icon" style="position: absolute; margin: 10px;" width="20" height="20" src="static/img/admin/memory.svg">
+              <p style="margin: 10px 50px; width: 100%; color: #8B949E; font-weight: normal;">RAM usage</p>
+              <div id="ram_memory_usage_div" class="progress_bar">
+                <div id="ram_memory_usage_0" style="background-color: #707070;" class="progress_bar_state"></div>
+                <div id="ram_memory_usage_1" style="margin: -10px 0px;" class="progress_bar_state"></div>
+              </div>
+              <ul class="memory_usage_ul">
+                <li style="color: #949494;">
+                  <!-- <p style="">•</p> -->
+                  <p id="server_program_memory" style="margin: 0px 0px; width: 100%; font-weight: normal;"></p>
+                </li>
+                <li style="color: #707070;">
+                  <p id="server_used_memory" style="margin: 0px 0px; width: 100%; font-weight: normal;"></p>
+                </li>
+                <li>
+                  <p id="server_total_memory" style="margin: 0px 0px; width: 100%; font-weight: normal;"></p>
+                </li>
+              </ul>
+            </div>
+          </th>
+        </tr>
+      </table>
+
     </div>
 
     <!--users-->
