--- a/app/static/css/admin/main.1.css
+++ b/app/static/css/admin/main.1.css
@@ -85,3 +85,9 @@ body {
   list-style-type: disc;
   white-space: nowrap;
 }
+
+.block_select {
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  user-select: none;
+}
