--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href = "static/css/admin/main.1.css"/>
     <link rel="stylesheet" href = "static/css/admin/left_bar.1.css"/>
     <link rel="stylesheet" href = "static/css/admin/main_page.1.css"/>
+    <link rel="stylesheet" href = "static/css/admin/checkBox.1.css"/>
 
   </head>
 
-  <body bgcolor = "#0D1117">
+  <body bgcolor = "#0D1117" style="overflow-x:hidden;">
     <div class="left_bar">
       <div class="logo">
         <img class="icon logo_img" width="50" height="50" src="static/img/dvd-disk.svg">
@@ -38,8 +39,8 @@
         </th></tr>
         <tr><th>
           <div class="left_bar_button" id="left_bar_templates" onclick="open_page('templates')">
-            <img class="icon" width="18" height="18" src="static/img/admin/.svg">
-            <p align="left">templates</p>
+            <img class="icon" width="18" height="18" src="static/img/dvd-disk.svg">
+            <p align="left">memory</p>
           </div>
         </th></tr>
         <tr><th>
@@ -167,7 +168,6 @@
 
       </div>
       <br>
-
       <div class="border border_size">
         <ul id="loglist" class="loglist"></ul>
       </div>
@@ -182,14 +182,35 @@
           <h2>Settings</h2>
         </div>
         <hr class="main_page_hr">
-        <p>hello</p>
+        <div class="main_page_button" style="width: 155px; margin: 10px" onclick="reboot_script()">
+          <img style="margin: 5px 5px" class="icon" width="20" height="20" src="static/img/refresh.svg">
+          <p style="margin: -25px 35px">reboot server</p>
+        </div>
+
+        <div class="main_page_button" style="width: 155px; margin: 10px; right: 0px; top: 54px; position: absolute;" onclick="save_settings()">
+          <img style="margin: 5px 5px" class="icon" width="20" height="20" src="static/img/admin/save.svg">
+          <p style="margin: -25px 35px">save settings</p>
+        </div>
       </div>
+      <br>
+      <table class="page_table">
+        <tr>
+          <th align="left">
+            <ul id="settings_left"></ul>
+          </th>
+          <th align="right">
+            <ul id="settings_right"></ul>
+          </th>
+        </tr>
+      </table>
+
     </div>
 
   </body>
 
   <script type="text/javascript" src="static/js/main.1.js"></script>
   <script type="text/javascript" src="static/js/admin/admin.1.js"></script>
+  <script type="text/javascript" src="static/js/admin/settings.1.js"></script>
   <script type="text/javascript" src="static/js/admin/logs.1.js"></script>
 
 
