--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -97,10 +97,10 @@
             </div>
           </th>
           <th align="right">
-            <div class="border sub_border_size" style="height: 135px;" align="left">
+            <div class="border sub_border_size" style="height: 120px;" align="left">
               <img class="icon" style="position: absolute; margin: 10px;" width="20" height="20" src="static/img/admin/memory.svg">
-              <p style="margin: 10px 50px; width: 100%; color: #8B949E; font-weight: normal;">RAM usage</p>
-              <div id="ram_memory_usage_div" class="progress_bar">
+              <p style="position: absolute; margin: 10px 50px; white-space: nowrap; color: #8B949E; font-weight: normal;">RAM usage</p>
+              <div id="ram_memory_usage_div" class="progress_bar" style="margin: 35px 0px;">
                 <div id="ram_memory_usage_0" style="background-color: #707070;" class="progress_bar_state"></div>
                 <div id="ram_memory_usage_1" style="margin: -10px 0px;" class="progress_bar_state"></div>
               </div>
