--- a/app/static/css/admin/left_bar.1.css
+++ b/app/static/css/admin/left_bar.1.css
@@ -1,6 +1,6 @@
 
 
-@media screen and (orientation: landscape) {
+@media screen and (min-width: 900px) {
   .left_bar {
     position: absolute;
     top: 40px;
@@ -8,7 +8,7 @@
   }
 }
 
-@media screen and (orientation: portrait) {
+@media screen and (max-width: 900px) {
   .left_bar {
     position: absolute;
     top: 40px;
