вывод информации о пользователе

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -146,7 +146,7 @@
           <h2>Users</h2>
         </div>
         <hr class="main_page_hr">
-        <div class="main_page_button block_select" style="width: 100px; margin: 10px" onclick="()">
+        <div class="main_page_button block_select" style="width: 100px; margin: 10px" onclick="get_users()">
           <img style="margin: 5px 5px" class="icon" width="20" height="20" src="static/img/admin/refresh.svg">
           <p style="margin: -25px 35px">refresh</p>
         </div>
