--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -38,7 +38,7 @@
           </div>
         </th></tr>
         <tr><th>
-          <div class="left_bar_button" id="left_bar_templates" onclick="open_page('templates')">
+          <div class="left_bar_button" id="left_bar_memory" onclick="open_page('memory')">
             <img class="icon" width="18" height="18" src="static/img/dvd-disk.svg">
             <p align="left">memory</p>
           </div>
@@ -157,12 +157,12 @@
       </div>
     </div>
 
-    <!--templates-->
-    <div class="main_page" id="templates" style="display: none;">
+    <!--memory-->
+    <div class="main_page" id="memory" style="display: none;">
       <div class="border border_size">
         <div class="name_area_border border_size" style="height: 52px">
-          <img class="icon" width="30" height="30" src="static/img/admin/.svg">
-          <h2>Templates</h2>
+          <img class="icon" width="30" height="30" src="static/img/dvd-disk.svg">
+          <h2>Memory</h2>
         </div>
         <hr class="main_page_hr">
         <p>hello</p>
