--- a/app/static/css/admin/main_page.1.css
+++ b/app/static/css/admin/main_page.1.css
@@ -22,6 +22,10 @@
     text-align: left;
     vertical-align:top;
   }
+
+  .path_list_grid {
+    grid-template-columns: repeat(2, 50%);
+  }
 }
 
 @media screen and (max-width: 900px) {
@@ -44,6 +48,16 @@
   .main_page_textarea {
     display: none;
   }
+
+  .path_list_grid {
+    grid-template-columns: repeat(1, 100%);
+  }
+}
+
+.path_list_grid {
+  display: grid;
+  /*grid-template-columns: repeat(4, 25%);*/
+  /*grid-gap: 10px;*/
 }
 
 .border {
@@ -186,4 +200,10 @@
   background-color: #161B22;
   margin-top: 10px;
   border-radius: 8px;
+}
+
+.path_grid {
+  width: 100%;
+  /* border: 1px solid #30363D;
+  border-collapse: collapse; */
 }
