перевод из байт во что-то адекватное

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -196,7 +196,7 @@
 
     </div>
 
-    <!--setings-->
+    <!--settings-->
     <div class="main_page" id="settings" style="display: none;">
       <div class="border border_size">
         <div class="name_area_border border_size" style="height: 52px">
