--- a/app/static/css/admin/main.1.css
+++ b/app/static/css/admin/main.1.css
@@ -32,6 +32,14 @@ body {
   line-height: 1.5;
 }
 
+.table_width {
+  width: 100%;
+  table-layout: fixed;
+}
+.table_width td {
+  width: 100%;
+}
+
 .icon {
   filter: invert(60%);
 }
