начал делать список шаблонов

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -167,6 +167,10 @@
         <hr class="main_page_hr">
         <p>hello</p>
       </div>
+      <br>
+      <div class="border border_size">
+        <ul id="templateslist" class="loglist"></ul>
+      </div>
     </div>
 
     <!--logs-->
@@ -233,6 +237,7 @@
   <script type="text/javascript" src="static/js/main.1.js"></script>
   <script type="text/javascript" src="static/js/admin/admin.1.js"></script>
   <script type="text/javascript" src="static/js/admin/users.1.js"></script>
+  <script type="text/javascript" src="static/js/admin/templates.1.js"></script>
   <script type="text/javascript" src="static/js/admin/settings.1.js"></script>
   <script type="text/javascript" src="static/js/admin/logs.1.js"></script>
 
