--- a/app/templates/m-main.html
+++ b/app/templates/m-main.html
@@ -119,7 +119,7 @@
           </div>
 
           <div class="preview_image" id="preview_image_div">
-            <img id="preview_image" class="" width="300px" src="/download?path=0&dir=&file=3.png" />
+            <img id="preview_image" class="" width="300px" src="" />
           </div>
         </div>
 
