--- a/app/static/css/admin/main.1.css
+++ b/app/static/css/admin/main.1.css
@@ -104,3 +104,19 @@ body {
   -khtml-user-select: none;
   user-select: none;
 }
+
+.path_panel {
+  background-color: #0D1117;
+  border-radius: 5px;
+
+  margin: 5px;
+
+  /* position: relative;
+  color: #C1C2BF;
+  border: 1px solid #30363D;
+  background-color: #010409;
+  padding: 12px 10px;
+  margin: 8px 0;
+  border-radius: 5px;
+  height: 30px; */
+}
